--- a/languages/bodi0-bot-counter-bg_BG.po
+++ b/languages/bodi0-bot-counter-bg_BG.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bodi0 bot visits counter\n"
-"POT-Creation-Date: 2014-01-22 13:39+0200\n"
-"PO-Revision-Date: 2014-01-22 13:39+0200\n"
+"POT-Creation-Date: 2014-01-24 13:14+0200\n"
+"PO-Revision-Date: 2014-01-24 13:15+0200\n"
 "Last-Translator: Budyoni Damyanov <budiony@gmail.com>\n"
 "Language-Team: \n"
 "Language: bg_BG\n"
@@ -16,143 +16,274 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../bodi0-bot-admin.php:47
+#: ../bodi0-bot-admin.php:159
+msgid "Invalid action type while attempting to update the file "
+msgstr "Невалидно действие в процеса на обновяване на файла "
+
+#: ../bodi0-bot-admin.php:168
+msgid " was updated."
+msgstr "беше обновено."
+
+#: ../bodi0-bot-admin.php:170
+msgid ""
+"However it is good idea to manually check if everything is correct and the "
+"file is placed in the root folder of your web server. If you experience 500 "
+"Internal Server Error condition, then remove the following lines from "
+msgstr ""
+"Впрочем е добра идея ръчно да проверите дали всичко е наред и дали файла се "
+"намира в главната директория на уеб сървъра. Ако получавате грешка 500 "
+"Internal Server Error, тогава премахнете следните редове от "
+
+#: ../bodi0-bot-admin.php:181
+msgid "The blocking rules for this bot were not found in file "
+msgstr "Блокиращите правила не бяха намерени във файла "
+
+#: ../bodi0-bot-admin.php:182
+msgid ""
+"Did you removed from the file the below comments and content in-between "
+"(which were created by the plugin)?"
+msgstr ""
+"Дали не сте премахнали ръчно коментарите и съдържанието между тях (които "
+"бяха създадени от плъгина)?"
+
+#: ../bodi0-bot-admin.php:190
+msgid "The blocking rules for this bot were removed from file "
+msgstr "Блокиращите правила за този бот бяха премахнати от файла "
+
+#: ../bodi0-bot-admin.php:198
+msgid "The blocking rules for this bot already exists in file "
+msgstr "Блокиращите правила за този бот вече съществуват във файла "
+
+#: ../bodi0-bot-admin.php:200
+msgid "No modification is necessary."
+msgstr "Не е нужна модификация"
+
+#: ../bodi0-bot-admin.php:208 ../bodi0-bot-admin.php:265
+msgid "Unable to write the new content to the file "
+msgstr "Невъзможно е записването на новото съдържание във файла "
+
+#: ../bodi0-bot-admin.php:217
+msgid "Please update this file manually by placing inside the following code: "
+msgstr "Моля, обновете този файл ръчно като поставите следния код: "
+
+#: ../bodi0-bot-admin.php:228
+msgid ""
+"In this case the system cannot modify it and you should remove the rules "
+"manually, for this bot everything in-between comments: "
+msgstr ""
+"В този случай системата не може да го промени автоматично, трябва ръчно да "
+"премахнете правилата, за този бот всичко между коментарите: "
+
+#: ../bodi0-bot-admin.php:233
+msgid "Wordpress do not have permissions to read/write the file "
+msgstr "Wordpress няма права да чете/записва файла"
+
+#: ../bodi0-bot-admin.php:257
+msgid " was created."
+msgstr " беше създаден."
+
+#: ../bodi0-bot-admin.php:259
+msgid ""
+"The configuration file does not existed and was created by the plugin. It is "
+"good idea to manually check if everything is correct and the file is placed "
+"in the root folder of your web server. If you experience 500 Internal Server "
+"Error condition, then remove the following lines from "
+msgstr ""
+"Конфигурационният файл не съществуваше и беше създаден от плъгина. Добра "
+"идея е ръчно да проверите дали всичко е наред и дали файла се намира в "
+"главната директория на уеб сървъра. Ако получавате грешка 500 Internal "
+"Server Error, тогава премахнете следните редове от "
+
+#: ../bodi0-bot-admin.php:274
+msgid ""
+"Wordpress File System Error, insufficient permissions for accessing the file "
+msgstr "Wordpress системна грешка, недостатъчни права за достъп до файла "
+
+#: ../bodi0-bot-admin.php:283
+msgid ""
+"Modifying the web.config file on IIS is not supported. However you can "
+"manually change the file contents by writing the correct directives."
+msgstr ""
+"Модифицирането на файла web.config не се поддържа. Впрочем можете ръчно да "
+"промените съдържанието му като поставите необходимите директиви."
+
+#: ../bodi0-bot-admin.php:292
+msgid ""
+"Modifying the config file of nginx server is not supported. However you can "
+"manually change the file contents by writing the correct directives."
+msgstr ""
+"Модифицирането на конфигурационния файл на nginx сървъра не се поддържа. "
+"Впрочем можете ръчно да промените съдържанието му като поставите "
+"необходимите директиви."
+
+#: ../bodi0-bot-admin.php:301
+msgid ""
+"Modifying the config file of this web server is not supported. However you "
+"can manually change the file contents by writing the correct directives."
+msgstr ""
+"Модифицирането на конфигурационния файл на този уеб сървър не се поддържа. "
+"Впрочем можете ръчно да промените съдържанието му като поставите "
+"необходимите директиви."
+
+#: ../bodi0-bot-admin.php:322
 msgid "Bot visits Stats"
 msgstr "Статистика на посещенията"
 
-#: ../bodi0-bot-admin.php:47
+#: ../bodi0-bot-admin.php:324
 msgid " were reset"
 msgstr "беше нулирана"
 
-#: ../bodi0-bot-admin.php:63
+#: ../bodi0-bot-admin.php:343
 msgid "New bot"
 msgstr "Новото име на бот"
 
-#: ../bodi0-bot-admin.php:63
+#: ../bodi0-bot-admin.php:345
 msgid "added"
 msgstr "беше добавен"
 
-#: ../bodi0-bot-admin.php:79
+#: ../bodi0-bot-admin.php:363
 msgid "The bot`s name"
 msgstr "Името на бота "
 
-#: ../bodi0-bot-admin.php:79
+#: ../bodi0-bot-admin.php:365
 msgid "was updated"
 msgstr "беше обновено"
 
-#: ../bodi0-bot-admin.php:94
+#: ../bodi0-bot-admin.php:382
 msgid "The Bot"
 msgstr "Ботът"
 
-#: ../bodi0-bot-admin.php:94
+#: ../bodi0-bot-admin.php:384
 msgid "was deleted"
 msgstr "беше изтрит"
 
-#: ../bodi0-bot-admin.php:130
+#: ../bodi0-bot-admin.php:456
 msgid "Bot visits counter [Administration]"
 msgstr "Брояч на посещенията от ботове [Администрация]"
 
-#: ../bodi0-bot-admin.php:131
+#: ../bodi0-bot-admin.php:459
 msgid "Reset Statistics"
 msgstr "Нулиране на цялата статистика"
 
-#: ../bodi0-bot-admin.php:132
+#: ../bodi0-bot-admin.php:462
 msgid ""
-"The list, by default, is ordered by number of visits, click on arrow to re-"
-"order"
+"The list, by default, is ordered by number of visits, click on table header "
+"arrows to re-order"
 msgstr ""
 "Списъкът, по подразбиране, е подреден по брой посещения, кликнете на "
-"стрелката за пренареждане"
+"стрелките за пренареждане"
 
-#: ../bodi0-bot-admin.php:133
+#: ../bodi0-bot-admin.php:464
+msgid ""
+"If you plan to block/unblock bots, a backup of your old .htaccess file will "
+"be created in case something goes wrong, called <code>.htaccess.bot-counter-"
+"backup.txt</code> in the same folder as your original file."
+msgstr ""
+"Ако планирате да блокирате/деблокирате ботове, копие на стария .htaccess "
+"файл ще бъде направено в случай, че нещо се обърка, с име <code>.htaccess."
+"bot-counter-backup.txt</code> в същата директория като оригинала."
+
+#: ../bodi0-bot-admin.php:466
 msgid "Refresh statistics"
 msgstr "Презареждане"
 
-#: ../bodi0-bot-admin.php:135
+#: ../bodi0-bot-admin.php:469
 msgid "Export as XML Spreadsheet"
 msgstr "Експорт като XML Spreadsheet"
 
-#: ../bodi0-bot-admin.php:198
-msgid "Filter by name"
-msgstr "Филтър по име"
+#: ../bodi0-bot-admin.php:537
+msgid "Filter (all)"
+msgstr "Филтър (всички)"
 
-#: ../bodi0-bot-admin.php:199
+#: ../bodi0-bot-admin.php:539
 msgid "Type here..."
 msgstr "Пишете тук..."
 
-#: ../bodi0-bot-admin.php:199
+#: ../bodi0-bot-admin.php:541
 msgid "Reset"
 msgstr "Нулиране"
 
-#: ../bodi0-bot-admin.php:205 ../bodi0-bot-admin.php:266
+#: ../bodi0-bot-admin.php:548 ../bodi0-bot-admin.php:653
 msgid "Bot name"
 msgstr "Име на бота"
 
-#: ../bodi0-bot-admin.php:206 ../bodi0-bot-admin.php:269
+#: ../bodi0-bot-admin.php:550 ../bodi0-bot-admin.php:663
 msgid "Bot identifier"
 msgstr "Идентификатор"
 
-#: ../bodi0-bot-admin.php:207
+#: ../bodi0-bot-admin.php:552
 msgid "Visits"
 msgstr "Посещения"
 
-#: ../bodi0-bot-admin.php:208
+#: ../bodi0-bot-admin.php:554
 msgid "Last visit"
 msgstr "Последно посещение"
 
-#: ../bodi0-bot-admin.php:209
+#: ../bodi0-bot-admin.php:556
 msgid "IP address"
 msgstr "IP адрес"
 
-#: ../bodi0-bot-admin.php:224
+#: ../bodi0-bot-admin.php:571
 msgid "Edit this item"
 msgstr "Редактиране на този запис"
 
-#: ../bodi0-bot-admin.php:224
+#: ../bodi0-bot-admin.php:571
 msgid "Edit"
 msgstr "Реадкция"
 
-#: ../bodi0-bot-admin.php:225
+#: ../bodi0-bot-admin.php:574
+msgid "Block/Unblock"
+msgstr "Блокирай/Деблокирай"
+
+#: ../bodi0-bot-admin.php:576
 msgid "Delete"
 msgstr "Изтриване"
 
-#: ../bodi0-bot-admin.php:236
+#: ../bodi0-bot-admin.php:587
 msgid "New name"
 msgstr "Ново име"
 
-#: ../bodi0-bot-admin.php:236
+#: ../bodi0-bot-admin.php:591
 msgid "up to 20 characters"
 msgstr "до 20 символа"
 
-#: ../bodi0-bot-admin.php:238
+#: ../bodi0-bot-admin.php:594
 msgid "Update"
 msgstr "Обнови"
 
-#: ../bodi0-bot-admin.php:239
+#: ../bodi0-bot-admin.php:596 ../bodi0-bot-admin.php:617
 msgid "Cancel"
 msgstr "Отмяна"
 
-#: ../bodi0-bot-admin.php:252
+#: ../bodi0-bot-admin.php:605
+msgid "Block the IP address and Bot identifier"
+msgstr "Блокиране на IP адреса и идентификатора"
+
+#: ../bodi0-bot-admin.php:612
+msgid "Unblock the IP address and Bot identifier"
+msgstr "Деблокиране на IP адреса и идентификатора"
+
+#: ../bodi0-bot-admin.php:633
 msgid "TOTAL"
 msgstr "ОБЩО"
 
-#: ../bodi0-bot-admin.php:252
+#: ../bodi0-bot-admin.php:635
 msgid "VISITS"
 msgstr "ПОСЕЩЕНИЯ"
 
-#: ../bodi0-bot-admin.php:256 ../bodi0-bot-admin.php:271
+#: ../bodi0-bot-admin.php:642 ../bodi0-bot-admin.php:673
 msgid "Add new Bot"
 msgstr "Добави бот"
 
-#: ../bodi0-bot-admin.php:266
+#: ../bodi0-bot-admin.php:658
 msgid "up to 20 characters, required"
 msgstr "до 20 символа, задължително"
 
-#: ../bodi0-bot-admin.php:269
+#: ../bodi0-bot-admin.php:668
 msgid "up to 100 characters, required"
 msgstr "до 100 символа, задължително"
 
-#: ../bodi0-bot-admin.php:278
+#: ../bodi0-bot-admin.php:679
 msgid ""
 "Tip: You can also monitor misc web browser visits by defining appropriate "
 "user-agent string here, for example &quot;Firefox&quot; or &quot;Chrome&quot;"
@@ -160,15 +291,15 @@ msgstr ""
 "Съвет: Можете да следите и произволен уеб браузър като зададете подходящите "
 "стойности, например &quot;Firefox&quot; или &quot;Chrome&quot;"
 
-#: ../bodi0-bot-admin.php:280
+#: ../bodi0-bot-admin.php:683
 msgid "See the complete user agent string list of"
 msgstr "Вижте пълния списък от user agent символи на "
 
-#: ../bodi0-bot-admin.php:280
+#: ../bodi0-bot-admin.php:685
 msgid "bots"
 msgstr "ботовете"
 
-#: ../bodi0-bot-admin.php:281
+#: ../bodi0-bot-admin.php:688
 msgid ""
 "Remark: Some of the returned data includes GeoLite data created by MaxMind, "
 "available from http://www.maxmind.com"
@@ -176,7 +307,7 @@ msgstr ""
 "Забележка: Някои от данните за локация включват GeoLite данни, създадени от "
 "MaxMind, от сайта http://www.maxmind.com"
 
-#: ../bodi0-bot-admin.php:282
+#: ../bodi0-bot-admin.php:690
 msgid "If you find this plugin useful, I wont mind if you buy me a beer"
 msgstr ""
 "Ако смятате, че този плъгин е полезен, нямам против да ме черпите с бира"
@@ -201,8 +332,8 @@ msgstr "Брояч на посещенията на ботове"
 msgid "Administration"
 msgstr "Администрация"
 
-#~ msgid "Filter list"
-#~ msgstr "Филтър"
+#~ msgid "Filter by name"
+#~ msgstr "Филтър по име"
 
 #~ msgid "Action"
 #~ msgstr "Действие"
